--- a/res/layout/post_layout.xml
+++ b/res/layout/post_layout.xml
@@ -31,12 +31,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="35dp"
                     android:layout_marginTop="5dp"
                     android:gravity="top"
                     android:inputType="text|textMultiLine"
                     android:minLines="2"
                     android:maxLines="8"
+                    android:scrollbars="vertical"
                     >
 
             </EditText>
