タイムラインのディバイダを変更

--- a/res/layout/listpage_layout.xml
+++ b/res/layout/listpage_layout.xml
@@ -9,7 +9,7 @@
             android:id="@+id/listpage_listview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:divider="@color/Gray3"
-            android:dividerHeight="1dp"
-            android:footerDividersEnabled="true"/>
+            android:dividerHeight="1px"
+            android:footerDividersEnabled="true"
+            android:clickable="false"/>
 </LinearLayout>
